<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.image.ImageFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/image_fragment"
    android:orientation="vertical"
    android:background="#FF141414">

    <ImageView
        android:id="@+id/image"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/image_date"
        android:contentDescription="@string/image" />

    <TextView
        android:textSize="16sp"
        android:id="@+id/image_date"
        android:layout_marginTop="10dp"
        android:text="@string/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/delete_image_button"/>

    <Button
        android:radius="64dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete_image"
        android:layout_width="wrap_content"
        android:id="@+id/delete_image_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>